--- a/tests/bunit.web.tests/Asserting/MarkupMatchesTests.razor
+++ b/tests/bunit.web.tests/Asserting/MarkupMatchesTests.razor
@@ -1,35 +1,47 @@
+@using Bunit.TestAssets
 @using Bunit.TestAssets.SampleComponents
 @inherits TestContext
-
 @code {
+    private readonly ITestOutputHelper outputHelper;
 
-	[Fact]
-	public void MarkupMatchesShouldNotBeBlockedByRenderer()
-	{
-		var tcs = new TaskCompletionSource<object?>();
+    public MarkupMatchesTests(ITestOutputHelper outputHelper)
+    {
+        this.outputHelper = outputHelper;
+    }
 
-		var cut = Render(@<LoadingComponent Task="@tcs.Task"/> );
+    [Fact]
+    public async Task MarkupMatchesShouldNotBeBlockedByRenderer()
+    {
+        await DumpCapture.OnFailureAsync(() =>
+        {
+            var tcs = new TaskCompletionSource<object?>();
 
-		cut.MarkupMatches(@<span>loading</span>);
+            var cut = Render(@<LoadingComponent Task="@tcs.Task" />    );
 
-		tcs.SetResult(true);
+            cut.MarkupMatches(@<span>loading</span>  );
 
-		cut.WaitForAssertion(() => cut.MarkupMatches(@<span>done</span>));
-	}
+            tcs.SetResult(true);
 
-	[SuppressMessage("Usage", "xUnit1026:Theory method does not use parameter")]
-	[Theory]
-	[Repeat(2)]
-	public void MarkupMatchesShouldNotBeBlockedByRendererComplex(int repeatCount)
-	{
-		var tcs = new TaskCompletionSource<object?>();
+            cut.WaitForAssertion(() => cut.MarkupMatches(@<span>done</span>));
+        },
+        outputHelper);
+    }
 
-		var cut = Render(@<InvokeAsyncInsideContinueWith Task="@tcs.Task"/> );
+    [Fact]
+    public async Task MarkupMatchesShouldNotBeBlockedByRendererComplex()
+    {
+        await DumpCapture.OnFailureAsync(() =>
+        {
+            var tcs = new TaskCompletionSource<object?>();
 
-		cut.MarkupMatches(@<span>waiting</span>);
+            var cut = Render(@<InvokeAsyncInsideContinueWith Task="@tcs.Task" /> );
 
-		tcs.SetResult(true);
+            cut.MarkupMatches(@<span>waiting</span>);
 
-		cut.WaitForAssertion(() => cut.MarkupMatches(@<span>done</span>));
-	}
+            tcs.SetResult(true);
+
+            cut.WaitForAssertion(() => cut.MarkupMatches(@<span>done</span>));
+        },
+        outputHelper);
+    }
 }
